# QtStreamDeck

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  project.qbs
examples/: CMakeLists.txt  LICENSE  examples.qbs
examples/cpp-example/: CMakeLists.txt  cpp-example.qbs
examples/cpp-example/src/: SimpleExample.cpp  SimpleExample.hpp  main.cpp
examples/images/: Attribution.txt
examples/qml-example/: CMakeLists.txt  qml-example.qbs
examples/qml-example/qml/minervous/streamdeck/example/: QmlDeckEmulatorContent.qml  QmlDeckExample.qml  qmldir
examples/qml-example/src/: main.cpp
examples/qmlExample/: CMakeLists.txt
examples/simple/: CMakeLists.txt  main.cpp  simpleexample.cpp  simpleexample.h
extensions/: CMakeLists.txt  extensions.qbs
extensions/minervous.streamdeck/: CMakeLists.txt  minervous.streamdeck.qbs
extensions/minervous.streamdeck/qml/minervous/streamdeck/: EmulatorWindow.qml  KeyItemEntry.qml  StreamDeckEmulatorWindow.qml  StreamDeckKeyItemEntry.qml  StreamDeckQmlControls.qml
extensions/minervous.streamdeck/src/: DeviceId.hpp  DeviceManager.cpp  DeviceManager.hpp  Emulator.hpp  ItemGrabber.cpp  ItemGrabber.hpp  KeyEntry.cpp  KeyEntry.hpp  KeyModel.cpp  KeyModel.hpp  Manager.cpp  Manager.hpp  PagedKeyModel.cpp  PagedKeyModel.hpp  Plugin.hpp  QmlDeviceId.hpp  QmlItemGrabber.cpp  QmlItemGrabber.hpp  QmlKeyEntry.hpp  QmlKeyModel.cpp  QmlKeyModel.hpp  QmlPagedKeyModel.cpp  QmlPagedKeyModel.hpp  QmlStreamDeck.hpp  QmlStreamDeckDeviceId.hpp  QmlStreamDeckEmulator.hpp  QmlStreamDeckKeyEntry.hpp  QmlStreamDeckKeyModel.cpp  QmlStreamDeckKeyModel.hpp  QmlStreamDeckManager.cpp  QmlStreamDeckManager.hpp  QmlStreamDeckPagedModel.cpp  QmlStreamDeckPagedModel.hpp  StreamDeck.cpp  StreamDeck.hpp  StreamDeckEmulator.hpp  StreamDeckManager.cpp  StreamDeckManager.hpp  StreamDeckPlugin.cpp  StreamDeckPlugin.hpp  (+2 more)
libs/: CMakeLists.txt  libs.qbs
libs/minervous.streamdeck/: CMakeLists.txt  minervous.streamdeck.qbs
libs/minervous.streamdeck/include/minervous/streamdeck/: BaseKeyEntry.hpp  Device.hpp  DeviceEmulator.hpp  DeviceId.hpp  DeviceManager.hpp  ImageHelper.hpp  KeyModel.hpp  LibExport.hpp  PagedKeyModel.hpp  StreamDeckLogging.hpp
libs/minervous.streamdeck/src/: BaseKeyEntry.cpp  Device.cpp  DeviceEmulator.cpp  DeviceManager.cpp  ImageHelper.cpp  KeyModel.cpp  PagedKeyModel.cpp  StreamDeckLogging.cpp
libs/minervous.streamdeck/src/devices/: AbstractDeviceBase.cpp  AbstractDeviceBase.hpp  DummyDevice.hpp  IDevice.hpp  StreamDeckOriginal.hpp  StreamDeckOriginalV2.hpp  StreamDeckPedal.cpp  StreamDeckPlus.cpp  StreamDeckPlus.hpp  StreamDeckXL.cpp  StreamDeckXL.hpp
libs/minervous.streamdeck/src/emulators/: IEmulator.hpp
libs/streamdeck/: CMakeLists.txt  streamdeck.qbs
libs/streamdeck/include/minervous/streamdeck/: BaseKeyEntry.hpp  Device.hpp  DeviceEmulator.hpp  DeviceId.hpp  DeviceManager.hpp  DeviceType.hpp  ImageHelper.hpp  KeyModel.hpp  PagedKeyModel.hpp  StreamDeckLib_global.hpp  StreamDeckLogging.hpp
libs/streamdeck/src/: BaseKeyEntry.cpp  Device.cpp  DeviceEmulator.cpp  DeviceManager.cpp  ImageHelper.cpp  KeyModel.cpp  PagedKeyModel.cpp  StreamDeckLogging.cpp
libs/streamdeck/src/devices/: AbstractDeviceBase.cpp  AbstractDeviceBase.hpp  DummyDevice.hpp  IDevice.hpp  StreamDeckMini.cpp  StreamDeckMini.hpp  StreamDeckOriginal.cpp  StreamDeckOriginal.hpp  StreamDeckOriginalV2.cpp  StreamDeckOriginalV2.hpp  StreamDeckPedal.cpp  StreamDeckPedal.hpp  StreamDeckPlus.cpp  StreamDeckPlus.hpp  StreamDeckXL.cpp  StreamDeckXL.hpp
libs/streamdeck/src/emulators/: IEmulator.hpp
plugin/: CMakeLists.txt  qmldir  streamdeckplugin.cpp  streamdeckplugin.h  streamdeckqmlplugin.cpp  streamdeckqmlplugin.h
qbs/imports/: ResourceGroup.qbs
qbs/modules/qml-run-helper/: qml-run-helper.qbs
src/: CMakeLists.txt  StreamDeckLib_global.h  device.cpp  device.h  deviceid.h  devicemanager.cpp  devicemanager.h  devicetype.h
src/devices/: basedeviceinterface.cpp  basedeviceinterface.h  deviceinterface.h  dummydeviceinterface.h  streamdeckmini.cpp  streamdeckmini.h  streamdeckoriginal.cpp  streamdeckoriginal.h  streamdeckoriginalv2.cpp  streamdeckoriginalv2.h  streamdeckpedal.cpp  streamdeckpedal.h  streamdeckxl.cpp  streamdeckxl.h
